# twitter-classification

./: Dockerfile  README.md  pyproject.toml
cd/: Chart.yaml  values.yaml
cd/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
cd/templates/tests/: test-connection.yaml
src/: main.py
src/config/: __init__.py  api_documentation.py  llm_config.py
src/controller/: anonymization_controller.py  classification_controller.py  training_controller.py
src/services/: anonymization_service.py  classification_service.py  data_service.py  openai_service.py  training_service.py
